<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="ime_name">AnySoftKeyboard</string>
    <string name="settings_app_name">AnySoftKeyboard Settings</string>
    <string name="spell_checker_service_name">AnySoftKeyboard Spell Checker</string>
    <string name="spell_checker_settings">AnySoftKeyboard Speller Settings</string>
    <string name="subtype_generic">speller-generic</string>
    <string name="copyright_text">Copyright\u0020©\u0020<xliff:g id="year">%d</xliff:g>\u0020<xliff:g id="owner">%s</xliff:g></string>
    <string name="version_text"><xliff:g id="version_name">%s</xliff:g>\u0020(v<xliff:g id="version_number">%s</xliff:g>)</string>
    <string name="additional_licenses"><u>Additional licenses…</u></string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point</string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for details.</string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is
        <xliff:g id="trace_file">%s</xliff:g>
    </string>
    <string name="menu_about_item">About</string>
    <string name="click_to_restart_suggestions">Click for suggestions</string>
    <string name="tips_notification_text">Click for tips!</string>
    <string name="tips_button">How to use</string>
    <string name="tips_button_description">A few tips about how to use AnySoftKeyboard</string>
    <string name="tips_title">AnySoftKeyboard tips</string>
    <string name="tips_pager_swipe_hint">&#2190;\u0020Swipe left or right for more tips&#2192;</string>
    <string name="tip_1_welcome_to_ask">Welcome to AnySoftKeyboard!</string>
    <string name="tip_1_how_to_access_settings">To access the settings; long press the ENTER key. You\'ll find a world
        of customizations there!
    </string>
    <string name="tip_2_gestures">I support gestures!</string>
    <string name="tip_2_gestures_tip">With a swipe, you can do a lot! Swipe from left to right will switch languages,
        swiping to the left will switch to symbols layout, swiping from the spacebar up will show up a utility keyboard,
        and swiping down will hide the keyboard.\nIt is configurable in the settings (remember? Long pressing the ENTER
        key).
    </string>
    <string name="tip_3_hidden_kbds">Hidden gems</string>
    <string name="tip_3_hidden_kbds_tip">There are some hidden keyboards:\n1) Swipe your finger from the spacebar and
        up, you\'ll get a utility keyboard with arrows and microphone (for voice input).\n2) Swipe your finger up
        outside the keyboard, and keep it pressed. This is the extension keyboard, with numbers and symbols.
    </string>
    <string name="tip_4_top_generic_row">Top row</string>
    <string name="tip_4_top_generic_row_tip">The top row is the same on all layouts, and it can be changed! The default
        top row includes symbols key (<i>123</i>), left and right arrow keys, and language key (<i>ABC</i>). You can
        replace this row in settings.
    </string>
    <string name="how_to_pointer_title">Welcome to AnySoftKeyboard</string>
    <string name="how_to_pointer_version_prefix">Version:</string>
    <string name="how_to_pointer_not_app">AnySoftKeyboard is not a regular application - it is a on-screen keyboard
        replacement.
    </string>
    <string name="how_to_pointer_how_to_url">Details about how to use this keyboard:</string>
    <string name="how_to_pointer_site">General details:</string>
    <string name="how_to_pointer_changelog">Details about the latest version:</string>
    <string name="how_to_pointer_issues">Bug reporting:</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="use_custom_sound_volume">Set custom volume</string>
    <string name="use_custom_sound_volume_on_summary">Sounds effects volume is custom.</string>
    <string name="use_custom_sound_volume_off_summary">Sounds effects volume is the system\'s notifications volume.
    </string>
    <string name="custom_sound_volume">Custom key-press volume</string>
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is used</string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is used</string>
    <string name="fullscreen_input_connection_supported">Use landscape full-screen</string>
    <string name="fullscreen_input_connection_supported_on_summary">Full-screen input in landscape</string>
    <string name="fullscreen_input_connection_supported_off_summary">Do not use full-screen input in landscape</string>
    <string name="fullscreen_portrait_input_connection_supported">Use portrait full-screen</string>
    <string name="fullscreen_portrait_input_connection_supported_on_summary">Full-screen input in portrait</string>
    <string name="fullscreen_portrait_input_connection_supported_off_summary">Do not use full-screen input in portrait
    </string>
    <string name="backword_support">Back-word support</string>
    <string name="backword_support_on_summary">Shifted Backspace will delete the last word</string>
    <string name="backword_support_off_summary">Shifted Backspace will delete the last character</string>
    <string name="special_dictionaries_group">Special dictionaries</string>
    <string name="use_user_dictionary">User-dictionary</string>
    <string name="use_user_dictionary_on_summary">Suggest user added words (double-click a typed-suggestion to add)</string>
    <string name="use_user_dictionary_off_summary"/>
    <string name="use_auto_dictionary">Auto dictionary</string>
    <string name="use_auto_dictionary_dialog_title">Select learn method</string>
    <string name="use_auto_dictionary_summary">Automatically learn new words. Learn method: %s</string>
    <string name="use_contacts_dictionary">Contacts dictionary</string>
    <string name="use_contacts_dictionary_on_summary">Suggest names from contacts list</string>
    <string name="use_contacts_dictionary_off_summary"/>
    <string name="tweaks_group">Tweaks</string>
    <string name="tweak_sound_group">Sound related tweaks</string>
    <string name="tweak_physical_keyboard_group">Physical keyboard tweaks</string>
    <string name="tweak_ui_group">Graphical tweaks</string>
    <string name="tweak_ux_group">Behavior tweaks</string>
    <string name="tweak_dictionary_group">Dictionary tweaks</string>
    <string name="settings_min_length_for_word_correction">Minimum word length for correction</string>
    <string name="show_hint_text">Show hint text</string>
    <string name="show_hint_text_on_summary">Show hints on keys, if theme supports</string>
    <string name="show_hint_text_off_summary">Never show hints on keys</string>
    <string name="is_sticky_extesion_keyboard">Sticky extension keyboard</string>
    <string name="is_sticky_extesion_keyboard_on_summary">Stays visible until explicitly closed</string>
    <string name="is_sticky_extesion_keyboard_off_summary">Closes after key press</string>
    <string name="is_extesion_keyboard_above_keyboard">Top extension keyboard</string>
    <string name="is_extesion_keyboard_above_keyboard_on_summary">Drawn above main keyboard</string>
    <string name="is_extesion_keyboard_above_keyboard_off_summary">Drawn on main keyboard</string>
    <string name="show_new_tips_notifications_again">Notify on new tips</string>
    <string name="show_new_tips_notifications_again_on_summary">Will notify you when unseen tips are available to read</string>
    <string name="show_new_tips_notifications_again_off_summary">Will not notify you when a new tip is available</string>
    <string name="use_keyrepeat">Use key repeat</string>
    <string name="use_keyrepeat_on_summary">Key repeat is enabled</string>
    <string name="use_keyrepeat_off_summary">Key repeat is disabled</string>
    <string name="emoticon_long_press_opens_popup">Long-press smiley popup</string>
    <string name="emoticon_long_press_opens_popup_on_summary">Show emoticons popup on long-press</string>
    <string name="emoticon_long_press_opens_popup_off_summary">Show emoticons popup on short-press</string>
    <string name="default_smiley_text">Smiley text</string>
    <string name="default_domain_text">Domain text</string>
    <string name="key_press_preview_popup">Key preview popup</string>
    <string name="key_press_preview_popup_on_summary">Show popup upon key-press</string>
    <string name="key_press_preview_popup_off_summary">Do not show popup upon key-press</string>
    <string name="zoom_factor_keys_in_portrait">Keys height factor in portrait mode</string>
    <string name="zoom_factor_keys_in_landscape">Keys height factor in landscape mode</string>
    <string name="insert_space_after_word_suggestion_selection">Space after candidate pick</string>
    <string name="insert_space_after_word_suggestion_selection_on_summary">Insert space after word suggestion select
    </string>
    <string name="insert_space_after_word_suggestion_selection_off_summary"/>
    <string name="cycle_all_symbols_keyboards">Cycle over all symbols</string>
    <string name="cycle_all_symbols_keyboards_on_summary">Symbols key will cycle over all symbols keyboards</string>
    <string name="cycle_all_symbols_keyboards_off_summary">Symbols key will only show main symbols keyboard</string>
    <string name="lang_key_shows_popup">Language switch by popup</string>
    <string name="lang_key_shows_popup_on_summary">Language key will pop-up a selection dialog</string>
    <string name="lang_key_shows_popup_off_summary">Language key will cycle languages</string>
    <string name="keyboard_sandbox">Click for text testing</string>
    <string name="keyboard_sandbox_title">Type below to test your settings</string>
    <string name="keyboards_group">Keyboards</string>
    <string name="quick_text_keys_group">Quick text keys</string>
    <string name="quick_text_key_active">Active quick text key</string>
    <string name="quick_text_key_dialog_title">Select key</string>
    <string name="quick_text_key_summary">Selected Quick Text key: %s</string>
    <string name="bottom_generic_row_group">Common bottom generic row</string>
    <string name="bottom_generic_row_dialog_title">Select row type</string>
    <string name="bottom_generic_row_summary">Selected bottom row: %s</string>
    <string name="bottom_generic_row_list_title">Select row type</string>
    <string name="extension_keyboard_group">Extension keyboard</string>
    <string name="extension_keyboard_dialog_title">Select keyboard</string>
    <string name="extension_keyboard_summary">Selected Extension Keyboard: %s</string>
    <string name="extension_keyboard_list_title">Select keyboard</string>
    <string name="keyboard_theme_group">Keyboard themes</string>
    <string name="keyboard_theme_dialog_title">Select theme</string>
    <string name="keyboard_theme_summary">Selected theme: %s</string>
    <string name="keyboard_theme_list_title">Select theme</string>
    <string name="multitap_timeout_title">Multi-tap timeout</string>
    <string name="multitap_timeout_summary">Timeout between key taps</string>
    <string name="long_press_timeout_title">Long-press time</string>
    <string name="long_press_timeout_summary">Key press time to be considered as long-press</string>
    <string name="tweak_workarounds_group">Workarounds</string>
    <string name="workaround_disable_rtl_fix">Disable Right-to-Left handling</string>
    <string name="workaround_disable_rtl_fix_summary_on">Use OS RTL handling (for SE phones)</string>
    <string name="workaround_disable_rtl_fix_summary_off">Use AnySoftKeyboard RTL handling</string>
    <string name="user_dict_editor">Words editor</string>
</resources>