<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prefs_keyboards_screen"
    android:key="prefs_keyboards_screen"
    android:title="@string/keyboards_group" >

    <EditTextPreference
        android:autoText="true"
        android:capitalize="sentences"
        android:dialogTitle="@string/keyboard_sandbox_title"
        android:key="keyboards_sandbox_3"
        android:lines="3"
        android:persistent="false"
        android:singleLine="false"
        android:title="@string/keyboard_sandbox" >
    </EditTextPreference>

    <Preference
        android:key="search_for_keyboards_packs"
        android:persistent="false"
        android:title="@string/search_market_for_addons" />

    <PreferenceCategory
        android:key="keyboard_addons_group"
        android:title="@string/keyboards_group" >
    </PreferenceCategory>

</PreferenceScreen>